--- a/application/configs/bu-application.ini
+++ b/application/configs/bu-application.ini
@@ -16,11 +16,11 @@ resources.db.adapter = "PDO_MYSQL"
 resources.db.params.host = "localhost"
 resources.db.params.username = "root"
 resources.db.params.password = ""
-resources.db.params.dbname = "nomobutest"
+resources.db.params.dbname = "nomobu"
 resources.db.isDefaultTableAdapter = true
-                    
 
-version = "0.0.0"
+
+version = "0.0.1"
 
 [staging : production]
 
