--- a/application/configs/plain-application.ini
+++ b/application/configs/plain-application.ini
@@ -11,14 +11,7 @@ resources.view.basePath = APPLICATION_PATH "/views"
 autoloaderNamespaces[] = "CD_"
 resources.layout.layoutPath = APPLICATION_PATH "/views/layouts/scripts"
 
-
-resources.db.adapter = "PDO_MYSQL"
-resources.db.params.host = "localhost"
-resources.db.params.username = "root"
-resources.db.params.password = ""
-resources.db.params.dbname = "nomobutest"
-resources.db.isDefaultTableAdapter = true
-                    
+placeholder.dbconfig = "this is a placeholder, please don't delete"
 
 version = "0.0.0"
 
